[project]
name = "sentiment-analysis-swarm"
version = "0.1.0"
description = "Comprehensive sentiment analysis system using Strands and agentic swarm"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "chromadb>=0.4.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    # "strands>=0.1.0",  # Using mock implementation instead
    "ollama>=0.1.0",
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
    "yt-dlp>=2025.8.11",
    "ffmpeg-python>=0.2.0",
    "PyPDF2>=3.0.0",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
